force-app/main/default/objects/DM_Inventory_Line_Item__c/DM_Inventory_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Inventory Line Item</label>
    <nameField>
        <displayFormat>ILI-{0000}</displayFormat>
        <label>Line Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>