force-app/main/default/objects/DM_Inventory_Line_Item__c/fields/DM_Comment__c.field-meta.xml
<CustomField>
    <fullName>DM_Comment__c</fullName>
    <label>Comment</label>
    <length>80</length>
    <type>Text</type>
</CustomField>