force-app/main/default/objects/DM_Inventory_Line_Item__c/fields/DM_Debit_Credit__c.field-meta.xml
<CustomField>
    <fullName>DM_Debit_Credit__c</fullName>
    <label>In or Out</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Out</fullName>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>