force-app/main/default/objects/DM_Inventory_Line_Item__c/fields/DM_Inventory_Num__c.field-meta.xml
<CustomField>
    <fullName>DM_Inventory_Num__c</fullName>
    <label>Inventory #</label>
    <referenceTo>DM_Inventory__c</referenceTo>
    <relationshipLabel>Inventory Line Items</relationshipLabel>
    <relationshipName>Inventory_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>