force-app/main/default/objects/DM_Inventory_Line_Item__c/fields/DM_Quantity_UOM__c.field-meta.xml
<CustomField>
    <fullName>DM_Quantity_UOM__c</fullName>
    <label>Quantity UOM</label>
    <length>80</length>
    <type>Text</type>
</CustomField>