force-app/main/default/objects/DM_Inventory_Line_Item__c/fields/DM_Reference_Transaction__c.field-meta.xml
<CustomField>
    <fullName>DM_Reference_Transaction__c</fullName>
    <label>Reference Transaction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>